<resources>
    <string name="app_name">Profile Books</string>

    <string name="common_text_save">Save</string>
    <string name="common_text_search">Keyword</string>
    <string name="common_text_cancel">Cancel</string>
    <string name="common_text_continue">Continue</string>
    <string name="common_text_note">Note</string>
    <string name="common_hint_checklist_note">Add note</string>
    <string name="common_text_select_date">Select Date</string>
    <string name="common_text_select_time">Select Time</string>
    <string name="common_text_select_year">Select Year</string>
    <string name="text_profile_book">Profile Book</string>
    <string name="hint_search_post">Search Post</string>
    <string name="text_gender">Gender</string>
    <string name="text_birth_date">Date of Birth</string>
    <string name="text_join_from">Join From</string>
    <string name="text_email">Email</string>
    <string name="text_address">Address</string>
    <string name="text_posts">Posts</string>
    <string name="text_favorite_posts">Favorite Posts</string>
</resources>
